waybar color change time

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -8,16 +8,6 @@ window#waybar {
   color: #fdf6e3;
 }
 
-#custom-right-arrow-dark,
-#custom-left-arrow-dark {
-  color: #1a1a1a;
-}
-#custom-right-arrow-light,
-#custom-left-arrow-light {
-  color: #292b2e;
-  background: #1a1a1a;
-}
-
 #workspaces,
 #clock.1,
 #clock.2,
@@ -28,7 +18,7 @@ window#waybar {
 #battery,
 #disk,
 #tray {
-  background: #1a1a1a;
+  background: #222222;
 }
 
 #workspaces button {
