--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -13,6 +13,7 @@ button {
     padding-bottom: 0;
     border: none;
     background-color: transparent;
+    border-bottom: 3px solid transparent;
 }
 
 button:active {
