--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -5,8 +5,8 @@
 }
 
 window#waybar {
-    background: #618DD9;
-    color: #81FF7E;
+    background: #000000;
+    color: #ffffff;
 }
 
 #workspaces,
