--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -41,21 +41,21 @@ window#waybar {
   padding: 0 3px;
 }
 
-#pulseaudio {
-  color: #268bd2;
-}
-#memory {
-  color: #2aa198;
-}
-#cpu {
-  color: #6c71c4;
-}
-#battery {
-  color: #859900;
-}
-#disk {
-  color: #b58900;
-}
+/* #pulseaudio {
+   color: #268bd2;
+   }
+   #memory {
+   color: #2aa198;
+   }
+   #cpu {
+   color: #6c71c4;
+   }
+   #battery {
+   color: #859900;
+   }
+   #disk {
+   color: #b58900;
+   } */
 
 #clock,
 #pulseaudio,
