--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -5,8 +5,8 @@
 }
 
 window#waybar {
-    background: #465584;
-    color: #ffffff;
+    background: #272c31;;
+    color: #dce1f2;
 }
 
 #workspaces,
@@ -18,7 +18,7 @@ window#waybar {
 #battery,
 #disk,
 #tray {
-    background: #303957;
+    background: #B2ADBD;
 }
 
 #workspaces button {
@@ -28,8 +28,8 @@ window#waybar {
 }
 
 #workspaces button.active{
-    color: #44E141;
-    border-bottom: 3px solid #44E141;
+    color: #CFAD94;
+    border-bottom: 3px solid #CFAD94;
 }
 #workspaces button:hover {
   box-shadow: inherit;
@@ -42,23 +42,23 @@ window#waybar {
 }
 
 #clock {
-    color: #E2C448;
+    color: #E5C9AF;
 }
 
 #pulseaudio {
-    color: #B2ADBD;
+    color: #96AAEC;
 }
 #memory {
-    color: #444ACB;
+    color: #A7B6E8;
 }
 #cpu {
-    color: #6c71c4;
+    color: #B9C6F1;
 }
 #battery {
-    color: #0267CC;
+    color: #dce1f2;
 }
 #disk {
-    color: #0E4D8D;
+    color: #9a9da9;
 }
 
 #clock,
