--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -3,8 +3,8 @@
 }
 
 window.bar {
-    background-color: ##531A76;
-    color: #FFFFFF;
+    background-color: @theme_bg_color;
+    color: @theme_fg_color;
 }
 
 button {
