--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -20,7 +20,7 @@ button:active {
 }
 
 button:hover {
-    border-bottom: 1px solid @theme_fg_color;
+  /* border-bottom: 1px solid @theme_fg_color; */
 }
 
 label {
@@ -51,12 +51,12 @@ label {
 
 .workspace-inactive {
   opacity: 0.5;
-  border-bottom: 3px transparent;
+  /* border-bottom: 3px transparent; */
 }
 
 .workspace-occupied {
   opacity: 1;
-  border-bottom: 3px transparent;
+  /* border-bottom: 3px transparent; */
 }
 
 .workspace-active {
