--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -4,7 +4,7 @@
 
 window.bar {
     /* background-color: @theme_bg_color; */
-    background: #ff5050;
+    background: #9C5464;
     color: @theme_fg_color;
     min-height: 4rem;
 }
