--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -4,7 +4,7 @@
 
 window.bar {
     /* background-color: @theme_bg_color; */
-    background: #583E43;
+    background: rgba(0, 0, 0, .5);
     color: @theme_fg_color;
     min-height: 4rem;
 }
