--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -8,6 +8,7 @@ window.bar {
     color: @theme_fg_color;
     min-height: 5rem;
     border: 2px solid #ea4c88;
+    border-radius: 3px 3px 0px 0px;
 }
 
 button {
