--- a/config/ags/style.css
+++ b/config/ags/style.css
@@ -24,7 +24,7 @@ button {
 }
 
 button:active {
-    background-color: #ea4c88;
+    background-color: @theme_selected_bg_color;
 }
 
 button:hover {
@@ -37,20 +37,12 @@ label {
 
 .client-title {
     color: @theme_selected_bg_color;
-    max-width: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis; 
 }
 
 .notification {
     color: yellow;
 }
 
-.media {
-    max-width: 50px;
-    overflow: hidden;
-    text-overflow: ellipsis; 
-}
 
 .workspace-indicator {
     min-width: 0;
