--- a/config/ags/style.scss
+++ b/config/ags/style.scss
@@ -1,7 +1,7 @@
 @use "sass:color";
 
 $bg: #222222;
-$fg: #bbbbbb;
+$fg: #ffffff;
 $accent: #005577;
 $radius: 0px;
 
@@ -11,7 +11,7 @@ window.Bar {
     box-shadow: none;
     background-color: $accent;
     color: $fg;
-    font-size: 10pt;
+    font-size: 11pt;
     // font-size: 1.1em;
     // font-weight: bold;
 
