--- a/config/ags/style.scss
+++ b/config/ags/style.scss
@@ -1,20 +1,108 @@
-// https://gitlab.gnome.org/GNOME/gtk/-/blob/gtk-3-24/gtk/theme/Adwaita/_colors-public.scss
-$theme_fg_color: "@theme_fg_color";
-$theme_bg_color: "@theme_bg_color";
+@use "sass:color";
+
+$bg: #222222;
+$fg: #ffffff;
+$accent: #005577;
+$radius: 0px;
 
 window.Bar {
-    background: transparent;
-    color: #{$theme_bg_color};
-    font-weight: bold;
-
-    >centerbox {
-        background: #{$theme_bg_color};
-        border-radius: 10px;
-        margin: 8px;
-    }
+    font-family: 'monospace';
+    border: none;
+    box-shadow: none;
+    background-color: $accent;
+    color: $fg;
+    font-size: 11pt;
+    // font-size: 1.1em;
+    // font-weight: bold;
 
     button {
-        border-radius: 8px;
-        margin: 2px;
+        all: unset;
+        background-color: transparent;
+
+        &:hover label {
+            background-color: color.adjust($fg, $alpha: -0.84);
+            border-color: color.adjust($accent, $alpha: -0.8);
+        }
+
+        &:active label {
+            background-color: color.adjust($fg, $alpha: -0.8)
+        }
+    }
+
+    label {
+        padding: 0 8px;
+        // margin: 2px;
+        border-radius: $radius;
+        // border: 1pt solid transparent;
+    }
+
+    .Workspaces {
+	background-color: $bg;
+	color: $fg;
+    }
+
+    .right {
+	background-color: $bg;
+    }
+
+    .Workspaces .focused label {
+        color: $fg;
+        background-color: $accent;
+    }
+
+    .Workspaces .inactive label {
+	opacity: 0.5;
+    }
+
+    .FocusedClient {
+        color: $accent;
+    }
+
+    .Media .Cover {
+        min-height: 1.2em;
+        min-width: 1.2em;
+        border-radius: $radius;
+        background-position: center;
+        background-size: contain;
+    }
+
+    .Battery label {
+        padding-left: 0;
+        margin-left: 0;
+    }
+
+    .AudioSlider {
+        * {
+            all: unset;
+        }
+
+        icon {
+            margin-right: .6em;
+        }
+
+        margin: 0 1em;
+
+        trough {
+            background-color: color.adjust($fg, $alpha: -0.8);
+            border-radius: $radius;
+        }
+
+        highlight {
+            background-color: $accent;
+            min-height: .8em;
+            border-radius: $radius;
+        }
+
+        slider {
+            background-color: $fg;
+            border-radius: $radius;
+            min-height: 1em;
+            min-width: 1em;
+            margin: -.2em;
+        }
+    }
+
+    .TrayIcon {
+	padding: 0 8px;
     }
 }
